WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274527
[GTK][WPE] Do not display uninitialized WebGL front buffer
https://bugs.webkit.org/show_bug.cgi?id=274527
Summary
[GTK][WPE] Do not display uninitialized WebGL front buffer
Loïc Yhuel
Reported
2024-05-22 08:37:27 PDT
When a page creates a WebGL context, but does not render immediately, we can display random contents depending on the platform.
Attachments
Add attachment
proposed patch, testcase, etc.
Loïc Yhuel
Comment 1
2024-05-22 08:56:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28919
EWS
Comment 2
2024-05-23 09:03:38 PDT
Committed
279206@main
(341129414655): <
https://commits.webkit.org/279206@main
> Reviewed commits have been landed. Closing PR #28919 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug