[GTK][WPE] Do not display uninitialized WebGL front buffer https://bugs.webkit.org/show_bug.cgi?id=274527

Reviewed by Miguel Gomez.

When a page creates a WebGL context, but does not render immediately, we display the compositor
texture from GraphicsContextGLTextureMapperANGLE.
After reshapeDrawingBuffer (glTexImage2D with null data), the contents are undefined as per the
OpenGL specification, and depending on the plaform this may display uninitialized memory.

We now check if the texture is initialized before using it in GCGLANGLELayer::swapBuffersIfNeeded
or TextureMapperGCGLPlatformLayer::paintToTextureMapper.

* Source/WebCore/platform/graphics/nicosia/NicosiaGCGLANGLELayer.cpp:
(Nicosia::GCGLANGLELayer::swapBuffersIfNeeded):
* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:
(WebCore::GraphicsContextGLTextureMapperANGLE::swapCompositorTexture):
(WebCore::GraphicsContextGLTextureMapperANGLE::reshapeDrawingBuffer):
* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.h:
* Source/WebCore/platform/graphics/texmap/TextureMapperGCGLPlatformLayer.cpp:
(WebCore::TextureMapperGCGLPlatformLayer::paintToTextureMapper):

Canonical link: https://commits.webkit.org/279206@main